# bio-babel-MCP

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
docs/: architecture.md
plugin/biobabel/: .mcp.json
plugin/biobabel-codex/: .mcp.json
plugin/biobabel-codex/.codex-plugin/: plugin.json
plugin/biobabel-codex/hooks/: hooks.json  r-paste-detector.py
plugin/biobabel-codex/skills/biobabel-overview/: SKILL.md
plugin/biobabel-codex/skills/use-ggplot2-py/: SKILL.md
plugin/biobabel-codex/skills/use-grid-py/: SKILL.md
plugin/biobabel-codex/skills/use-gtable-py/: SKILL.md
plugin/biobabel-codex/skills/use-monocle2py/: SKILL.md
plugin/biobabel-codex/skills/use-monocle3/: SKILL.md
plugin/biobabel-codex/skills/use-scales/: SKILL.md
plugin/biobabel/.claude-plugin/: plugin.json
plugin/biobabel/commands/: plan.md  recommend.md
plugin/biobabel/hooks/: hooks.json  r-paste-detector.py
plugin/biobabel/skills/biobabel-overview/: SKILL.md
plugin/biobabel/skills/use-ggplot2-py/: SKILL.md
plugin/biobabel/skills/use-grid-py/: SKILL.md
plugin/biobabel/skills/use-gtable-py/: SKILL.md
plugin/biobabel/skills/use-monocle2py/: SKILL.md
plugin/biobabel/skills/use-monocle3/: SKILL.md
plugin/biobabel/skills/use-scales/: SKILL.md
src/biobabel/: __init__.py  detector_api.py  manifest_api.py
src/biobabel/_concept/: __init__.py  anti_pattern_detector.py  idiom_search.py
src/biobabel/_contracts/: __init__.py  validator.py
src/biobabel/_exporters/: __init__.py  installer.py  skills.py
src/biobabel/_planner/: __init__.py  prereq_check.py  recommender.py  search.py  workflow_planner.py
src/biobabel/_registry/: __init__.py  builder.py  differ.py  discovery.py  lockfile.py  sha.py
src/biobabel/_retrofit/: __init__.py  retrofit.py
src/biobabel/_runtime/: __init__.py  artifacts.py  limits.py  policy.py  sandbox.py  session.py  trace.py
src/biobabel/cli/: __init__.py  __main__.py
src/biobabel/mcp/: __init__.py  __main__.py  envelope.py  server.py  tracing.py
src/biobabel/mcp/tools/: __init__.py  concept.py  discovery.py  meta.py  planning.py  runtime.py  validation.py
src/biobabel/mcp/transports/: __init__.py  stdio.py
tests/: conftest.py  test_acceptance.py  test_anti_pattern_detector.py  test_codex_plugin.py  test_contract_validator.py  test_installer.py  test_manifest_api.py  test_mcp_server.py  test_planner.py  test_policy.py  test_registry.py  test_retrofit.py  test_sandbox.py  test_security.py  test_session_store.py  test_skills.py  test_stdio_transport.py
