[build-system]
# hatchling >=1.27 is the first release with PEP 639 SPDX license-expression
# support (`license = "MIT"` as a string rather than a table). Pinning this
# floor prevents fast-failures on CI runners that ship an older bundled
# hatchling and try to read the SPDX string as a legacy license table.
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "biobabel"
version = "0.1.0"
description = "Agent control plane for Bio-Babel: discover, translate, plan, scaffold, verify R-to-Python bioinformatics ports via MCP."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Bio-Babel maintainers" }]
keywords = ["bioinformatics", "mcp", "agent", "r-to-python", "ggplot2", "monocle3", "grid"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.5",
    "click>=8.1",
    "pyyaml>=6.0",
    "tomlkit>=0.13",
    "jinja2>=3.1",
    "rich>=13.0",
]

[project.optional-dependencies]
verify = ["rpy2>=3.5", "Pillow", "scikit-image"]
http   = ["uvicorn>=0.27", "starlette>=0.36"]
# Upper bounds prevent a major-version bump of any of these tools from
# silently breaking CI between commits. Bump the upper bound deliberately
# (with a code-review checkpoint) when the new major arrives.
dev = [
    "pytest>=7,<9",
    "pytest-cov>=4,<7",
    "pytest-xdist>=3,<4",
    "ruff>=0.5,<1.0",
    "mypy>=1.0,<2.0",
    "bandit>=1.7,<2.0",
    "pip-audit>=2.6,<3.0",
    # tomllib is stdlib from Python 3.11; tomli is the canonical backport.
    "tomli>=2.0; python_version<'3.11'",
]

[project.scripts]
biobabel     = "biobabel.cli.__main__:main"
biobabel-mcp = "biobabel.mcp.__main__:main"

[project.urls]
Homepage   = "https://github.com/Bio-Babel/bio-babel"
Repository = "https://github.com/Bio-Babel/bio-babel"
Issues     = "https://github.com/Bio-Babel/bio-babel/issues"
Docs       = "https://github.com/Bio-Babel/bio-babel/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/biobabel"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "README.md", "AGENTS.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "needs_rpy2: requires the optional rpy2 extra",
    "needs_grid_py: requires rgrid-python installed",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["rpy2.*", "copier.*", "skimage.*"]
ignore_missing_imports = true
